<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text_home"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/host_guest_margin_40"
        android:layout_marginStart="@dimen/host_guest_margin_40"
        android:layout_marginTop="@dimen/margin_10"
        android:text="@string/host"
        android:textAllCaps="true"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/host_guest_text_size_22"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stopwatch" />

    <TextView
        android:id="@+id/text_guest"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/guest_section_margin_36"
        android:layout_marginRight="@dimen/guest_section_margin_36"
        android:text="@string/guest"
        android:textAllCaps="true"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/host_guest_text_size_22"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/text_home"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_home" />

    <TextView
        android:id="@+id/text_score_guest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_10"
        android:text="@string/default_0"
        android:textColor="@android:color/white"
        android:textSize="@dimen/score_text_size"
        app:layout_constraintEnd_toEndOf="@+id/text_guest"
        app:layout_constraintStart_toStartOf="@+id/text_guest"
        app:layout_constraintTop_toBottomOf="@+id/text_guest" />

    <TextView
        android:id="@+id/text_score_host"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_10"
        android:text="@string/default_0"
        android:textColor="@android:color/white"
        android:textSize="@dimen/score_text_size"
        app:layout_constraintEnd_toEndOf="@+id/text_home"
        app:layout_constraintStart_toStartOf="@+id/text_home"
        app:layout_constraintTop_toBottomOf="@+id/text_home" />

    <TextView
        android:id="@+id/text_dash"
        android:layout_width="13dp"
        android:layout_height="wrap_content"
        android:text="@string/score_separator"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/sparator_size_60"
        app:layout_constraintBottom_toBottomOf="@id/text_score_host"
        app:layout_constraintEnd_toStartOf="@+id/text_guest"
        app:layout_constraintLeft_toRightOf="@+id/text_score_host"
        app:layout_constraintRight_toLeftOf="@+id/text_score_guest"
        app:layout_constraintStart_toEndOf="@+id/text_home"
        app:layout_constraintTop_toTopOf="@id/text_score_host" />


    <TextView
        android:id="@+id/stopwatch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/black"
        android:gravity="center"
        android:text="@string/default_timer_text"
        android:textColor="@color/colorRed"
        android:textSize="@dimen/timer_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="@dimen/margin_divider_20"
        android:layout_marginRight="@dimen/margin_divider_20"
        android:layout_marginTop="@dimen/margin_10"
        android:background="@color/colorDivider"
        app:layout_constraintTop_toBottomOf="@id/text_score_host" />

    <Button
        android:id="@+id/button_host_touchdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_10"
        android:onClick="touchDownHost"
        android:text="@string/point_6"
        app:layout_constraintEnd_toEndOf="@+id/text_score_host"
        app:layout_constraintStart_toStartOf="@+id/text_score_host"
        app:layout_constraintTop_toBottomOf="@id/divider" />

    <TextView
        android:id="@+id/text_touchdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_touch_down"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@+id/button_host_touchdown"
        app:layout_constraintEnd_toEndOf="@+id/text_dash"
        app:layout_constraintStart_toStartOf="@+id/text_dash"
        app:layout_constraintTop_toTopOf="@+id/button_host_touchdown" />

    <Button
        android:id="@+id/button_guest_touchdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="touchDownGuest"
        android:text="@string/point_6"
        app:layout_constraintBottom_toBottomOf="@+id/button_host_touchdown"
        app:layout_constraintEnd_toEndOf="@+id/text_score_guest"
        app:layout_constraintStart_toStartOf="@+id/text_score_guest"
        app:layout_constraintTop_toTopOf="@+id/button_host_touchdown" />

    <Button
        android:id="@+id/button_host_field_goal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_10"
        android:onClick="fieldGoalHost"
        android:text="@string/point_3"
        app:layout_constraintEnd_toEndOf="@+id/button_host_touchdown"
        app:layout_constraintStart_toStartOf="@+id/button_host_touchdown"
        app:layout_constraintTop_toBottomOf="@+id/button_host_touchdown" />

    <TextView
        android:id="@+id/text_field_goal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_field_goal"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@+id/button_host_field_goal"
        app:layout_constraintEnd_toEndOf="@+id/text_touchdown"
        app:layout_constraintStart_toStartOf="@+id/text_touchdown"
        app:layout_constraintTop_toTopOf="@+id/button_host_field_goal" />

    <Button
        android:id="@+id/button_guest_field_goal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="fieldGoalGuest"
        android:text="@string/point_3"
        app:layout_constraintBottom_toBottomOf="@+id/button_host_field_goal"
        app:layout_constraintEnd_toEndOf="@+id/button_guest_touchdown"
        app:layout_constraintStart_toStartOf="@+id/button_guest_touchdown"
        app:layout_constraintTop_toTopOf="@+id/button_host_field_goal" />

    <Button
        android:id="@+id/button_host_safety"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_10"
        android:onClick="safetyHost"
        android:text="@string/point_2"
        app:layout_constraintEnd_toEndOf="@+id/button_host_field_goal"
        app:layout_constraintStart_toStartOf="@+id/button_host_field_goal"
        app:layout_constraintTop_toBottomOf="@+id/button_host_field_goal" />

    <TextView
        android:id="@+id/text_safety"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_safety"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@+id/button_host_safety"
        app:layout_constraintEnd_toEndOf="@+id/text_field_goal"
        app:layout_constraintStart_toStartOf="@+id/text_field_goal"
        app:layout_constraintTop_toTopOf="@+id/button_host_safety" />

    <Button
        android:id="@+id/button_guest_safety"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="safetyGuest"
        android:text="@string/point_2"
        app:layout_constraintBottom_toBottomOf="@+id/button_host_safety"
        app:layout_constraintEnd_toEndOf="@+id/button_guest_field_goal"
        app:layout_constraintStart_toStartOf="@+id/button_guest_field_goal"
        app:layout_constraintTop_toTopOf="@+id/button_host_safety" />

    <Button
        android:id="@+id/button_host_extra_one"
        android:layout_width="@dimen/extra_point_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_10"
        android:onClick="extraOnePointHost"
        android:text="@string/point_1"
        app:layout_constraintStart_toStartOf="@+id/button_host_safety"
        app:layout_constraintTop_toBottomOf="@+id/button_host_safety" />

    <Button
        android:id="@+id/button_host_extra_two"
        android:layout_width="@dimen/extra_point_width"
        android:layout_height="wrap_content"
        android:onClick="extraTwoPointHost"
        android:text="@string/point_2"
        app:layout_constraintBottom_toBottomOf="@+id/button_host_extra_one"
        app:layout_constraintStart_toEndOf="@+id/button_host_extra_one"
        app:layout_constraintTop_toTopOf="@+id/button_host_extra_one" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_extra"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@+id/button_host_extra_two"
        app:layout_constraintEnd_toEndOf="@+id/text_safety"
        app:layout_constraintStart_toStartOf="@+id/text_safety"
        app:layout_constraintTop_toTopOf="@+id/button_host_extra_two" />

    <Button
        android:id="@+id/button_guest_extra_one"
        android:layout_width="@dimen/extra_point_width"
        android:layout_height="wrap_content"
        android:onClick="extraOnePointGuest"
        android:text="@string/point_1"
        app:layout_constraintBottom_toBottomOf="@+id/button_guest_extra_two"
        app:layout_constraintEnd_toEndOf="@+id/button_guest_safety"
        app:layout_constraintTop_toTopOf="@+id/button_guest_extra_two" />

    <Button
        android:id="@+id/button_guest_extra_two"
        android:layout_width="@dimen/extra_point_width"
        android:layout_height="wrap_content"
        android:onClick="extraTwoPointGuest"
        android:text="@string/point_2"
        app:layout_constraintBottom_toBottomOf="@+id/button_host_extra_one"
        app:layout_constraintEnd_toStartOf="@+id/button_guest_extra_one"
        app:layout_constraintTop_toTopOf="@+id/button_host_extra_one" />

    <ImageView
        android:id="@+id/image_reset"
        android:layout_width="@dimen/reset_button_size"
        android:layout_height="@dimen/reset_button_size"
        android:layout_marginTop="@dimen/reset_button_top_margin"
        android:contentDescription="@string/content_desc_reset_button"
        android:onClick="reset"
        android:src="@drawable/reset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_host_extra_two" />

    <ImageView
        android:id="@+id/image_play"
        android:layout_width="@dimen/reset_button_size"
        android:layout_height="@dimen/reset_button_size"
        android:contentDescription="@string/content_desc_reset_button"
        android:onClick="play"
        android:src="@drawable/play"
        app:layout_constraintBottom_toBottomOf="@+id/text_home"
        app:layout_constraintEnd_toStartOf="@+id/text_guest"
        app:layout_constraintStart_toEndOf="@+id/text_home"
        app:layout_constraintTop_toTopOf="@+id/text_home" />

</android.support.constraint.ConstraintLayout>